[gd_scene load_steps=6 format=3 uid="uid://be3lmcqlno768"]

[ext_resource type="Script" path="res://tower_bullet.gd" id="1_c022x"]
[ext_resource type="Texture2D" uid="uid://baorvvun31jgv" path="res://assets/fire.png" id="2_lbuwx"]
[ext_resource type="Texture2D" uid="uid://cpvyrcmp0lsq8" path="res://assets/bluefire.png" id="3_6qxx4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ac2hs"]
radius = 16.5
height = 64.0

[sub_resource type="SpriteFrames" id="SpriteFrames_v5sin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lbuwx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6qxx4")
}],
"loop": true,
"name": &"upgraded",
"speed": 5.0
}]

[node name="TowerBullet" type="Area2D" groups=["turret_bullet"]]
collision_layer = 128
collision_mask = 2
script = ExtResource("1_c022x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ac2hs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_v5sin")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
